# Triangles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.forgejo/workflows/: unittests.yml
.github/workflows/: unittests.yml
build_include/: imconfig.h  imgui-SFML.h  imstb_textedit.h  imstb_truetype.h
include/: imgui-SFML_export.h  imgui.h  imgui_internal.h  imstb_rectpack.h
src/: circle.cpp  circle.hpp  helpers.cpp  helpers.hpp  imgui_helper.hpp  main.cpp  raygui.cpp  shape.cpp  shape.hpp  state.cpp  state.hpp  triangle.cpp  triangle.hpp
src/unittest/: test_helpers.cpp
